refactor: Update Brazil time display in header with automatic update

--- a/src/blog/templates/blog/includes/brazil-time.html
+++ b/src/blog/templates/blog/includes/brazil-time.html
@@ -1,6 +1,6 @@
 {% load brazil_time %}
 
-<span id="brazilTime" class="p-1 rounded text-xs bg-blue-800 text-gray-100">
+<span id="brazilTime" class="p-1 rounded text-xs bg-blue-800 text-gray-100 whitespace-nowrap">
     {% display_brazil_time %}
 </span>
 
