--- a/src/brazil_blog/static/css/brazil_blog_compiled.css
+++ b/src/brazil_blog/static/css/brazil_blog_compiled.css
@@ -1767,6 +1767,10 @@ select {
   white-space: nowrap;
 }
 
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1986,6 +1990,11 @@ select {
   line-height: 1.75rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -2032,6 +2041,11 @@ select {
 .text-blue-800 {
   --tw-text-opacity: 1;
   color: rgb(30 64 175 / var(--tw-text-opacity));
+}
+
+.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
 .text-gray-500 {
@@ -2283,6 +2297,10 @@ select {
 }
 
 @media (min-width: 640px) {
+  .sm\:block {
+    display: block;
+  }
+
   .sm\:flex-row {
     flex-direction: row;
   }
@@ -2291,6 +2309,16 @@ select {
     padding-top: 2rem;
     padding-bottom: 2rem;
   }
+
+  .sm\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -2298,12 +2326,12 @@ select {
     margin-top: 0px;
   }
 
-  .md\:w-auto {
-    width: auto;
-  }
-
   .md\:inline-block {
     display: inline-block;
+  }
+
+  .md\:w-auto {
+    width: auto;
   }
 
   .md\:max-w-5xl {
@@ -2322,13 +2350,13 @@ select {
     align-items: flex-end;
   }
 
+  .md\:gap-2 {
+    gap: 0.5rem;
+  }
+
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
-  }
-
-  .md\:gap-2 {
-    gap: 0.5rem;
   }
 }
 
