--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -14,7 +14,7 @@
                 {% endif %}
                 <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-end bg-gradient-to-t to-transparent from-yellow-500">
                     <div class="flex items-center justify-between gap-4">
-                        <div>
+                        <div class="flex-col">
                             <h1 class="flex-wrap bold text-4xl mb-0 text-black">{{ page.title }}</h1>
                             <div class="text-sm italic">{{ page.specific.date | date:"d-m-Y H:i" }}</div>
                         </div>
@@ -30,14 +30,16 @@
                             </div>
                         {% endif %}
                     </div>
-                    <div class="flex ml-auto items-center gap-4">
-                        {{ page.hero_text }}
-                        {% if page.hero_cta_link %}
-                            <a href="{% pageurl page.hero_cta_link %}" class="bg-blue-700 text-white px-4 py-2 rounded-lg no-underline hover:text-amber-300 transition-colors drop-shadow">
-                                {% firstof page.hero_cta page.hero_cta_link.title %}
-                            </a>
-                        {% endif %}
-                    </div>
+                    {% if page.hero_text %}
+                        <div class="flex ml-auto items-center gap-4">
+                            {{ page.hero_text }}
+                            {% if page.hero_cta_link %}
+                                <a href="{% pageurl page.hero_cta_link %}" class="bg-blue-700 text-white px-4 py-2 rounded-lg no-underline hover:text-amber-300 transition-colors drop-shadow">
+                                    {% firstof page.hero_cta page.hero_cta_link.title %}
+                                </a>
+                            {% endif %}
+                        </div>
+                    {% endif %}
                 </div>
             </div>
             <div class="flex flex-col p-4 gap-4">
