--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -13,19 +13,19 @@
                     <div class="h-80 bg-gray-300"></div>
                 {% endif %}
                 <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-end bg-gradient-to-t to-transparent from-yellow-500">
-                    <div class="flex items-center justify-between gap-4">
-                        <div class="flex-col">
+                    <div class="flex items-end justify-between gap-4">
+                        <div class="flex-col w-4/5">
                             <h1 class="flex-wrap bold text-4xl mb-0 text-black">{{ page.title }}</h1>
                             <div class="text-sm italic">{{ page.specific.date | date:"d-m-Y H:i" }}</div>
                         </div>
                         {% if page.author.author_page %}
-                            <a href="{{ page.author.author_page.url }}" class="flex flex-row items-center gap-4 hover:underline">
-                                <p class="text-sm italic">{% post_user_display_name page %}</p>
+                            <a href="{{ page.author.author_page.url }}" class="flex flex-row items-center gap-2 hover:underline">
+                                <p class="text-sm italic hidden sm:block">{% post_user_display_name page %}</p>
                                 {% post_user_avatar page %}
                             </a>
                         {% else %}
                             <div class="flex flex-row items-center gap-4">
-                                <p class="text-sm italic">{% post_user_display_name page %}</p>
+                                <p class="hidden sm:flex text-sm italic">{% post_user_display_name page %}</p>
                                 {% post_user_avatar page %}
                             </div>
                         {% endif %}
@@ -52,7 +52,7 @@
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-4">
                     {% for item in page.gallery_images.all %}
                         <div class="bg-white rounded-xl overflow-hidden drop-shadow group hover:rotate-3 transition-transform">
-                            {% image item.image fill-1920x1080 %}
+                            {% image item.image fill-1920x1080-c100 %}
                             {{ item.caption }}
                         </div>
                     {% endfor %}
