--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -21,7 +21,7 @@
                         {% if page.author.author_page %}
                             <a href="{{ page.author.author_page.url }}" class="flex flex-row items-center gap-2 hover:underline">
                                 <p class="text-sm italic hidden sm:block">{% post_user_display_name page %}</p>
-                                {% post_user_avatar page %}
+                                {% post_user_avatar page 'w-10 h-10 rounded-full object-cover sm:w-16 sm:h-16' %}
                             </a>
                         {% else %}
                             <div class="flex flex-row items-center gap-4">
