fix font-bold and improve mobile view #36

--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -15,7 +15,7 @@
                 <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-end bg-gradient-to-t to-transparent from-yellow-500">
                     <div class="flex items-end justify-between gap-4">
                         <div class="flex-col w-4/5">
-                            <h1 class="flex-wrap bold text-4xl mb-0 text-black">{{ page.title }}</h1>
+                            <h1 class="flex-wrap font-bold text-xl md:text-4xl mb-0 text-black">{{ page.title }}</h1>
                             <div class="text-sm italic">{{ page.specific.date | date:"d-m-Y H:i" }}</div>
                         </div>
                         {% if page.author.author_page %}
