--- a/src/home/templates/home/home_page.html
+++ b/src/home/templates/home/home_page.html
@@ -23,7 +23,7 @@ Delete the line below if you're just getting started and want to remove the welc
                 <div class="h-80 bg-gray-300"></div>
             {% endif %}
                 <div class="h-full absolute top-0 p-4 w-full flex flex-col-reverse md:flex-row items-start md:items-end justify-between bg-gradient-to-t to-transparent from-yellow-500">
-                    <h1 class="bold text-4xl mb-0 text-black drop-shadow">
+                    <h1 class="font-bold text-4xl mb-0 text-black drop-shadow">
                         {{ page.title }}
                     </h1>
                     <div class="flex ml-auto items-center gap-4">
