responsive header blog page #36

--- a/src/brazil_blog/static/css/brazil_blog.css
+++ b/src/brazil_blog/static/css/brazil_blog.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+.blog-header-image {
+    @apply w-full h-full object-cover object-center;
+}
