--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -5,17 +5,18 @@
 
 <div class="bg-green-700 py-8 flex-grow">
     <div class="max-w-3xl md:max-w-5xl mx-auto p-4">
-        <div class="bg-white rounded-xl overflow-hidden drop-shadow">
-            <div class="relative aspect-w-16 aspect-h-4">
+        <div class="bg-white rounded-xl overflow-hidden drop-shadow ">
+            <div class="relative size-full aspect-[16/9]">
                 {% if page.image %}
-                    {% picture page.image format-{webp,avif,jpeg} fill-1024x320 bgcolor-3730a3 %}
+                    <div class="bg-gray-300"></div>
+                    {% picture page.image format-{webp,avif,jpeg} original class="blog-header-image" bgcolor-3730a3 %}
                 {% else %}
-                    <div class="h-80 bg-gray-300"></div>
+                    <div class="h-full w-full bg-gray-300"></div>
                 {% endif %}
                 <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-end bg-gradient-to-t to-transparent from-yellow-500">
                     <div class="flex items-end justify-between gap-4">
                         <div class="flex-col w-4/5">
-                            <h1 class="flex-wrap font-bold text-xl md:text-4xl mb-0 text-black">{{ page.title }}</h1>
+                            <h1 class="flex-wrap font-bold text-xl md:text-4xl mb-0 text-black overflow-scroll line-clamp-3">{{ page.title }}</h1>
                             <div class="text-sm italic">{{ page.specific.date | date:"d-m-Y H:i" }}</div>
                         </div>
                         {% if page.author.author_page %}
