--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -54,7 +54,7 @@
                     {% for item in page.gallery_images.all %}
                         <div class="bg-white rounded-xl overflow-hidden drop-shadow group hover:rotate-3 transition-transform">
                             {% image item.image fill-1920x1080-c100 %}
-                            {{ item.caption }}
+                            <div class="pl-2 p-1">{{ item.caption }}</div>
                         </div>
                     {% endfor %}
                 </div>
