--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="flex flex-col p-4 gap-4">
-                <div class="font-semibold italic">
+                <div class="font-light">
                     {{ page.intro }}
                 </div>
                 <div>
