--- a/src/blog/templates/blog/blog_index_page.html
+++ b/src/blog/templates/blog/blog_index_page.html
@@ -19,7 +19,7 @@
                         <div class="h-80 bg-gray-300"></div>
                     {% endif %}
                     <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-end bg-gradient-to-t to-transparent from-yellow-500">
-                        <h2 class="bold text-4xl mb-2 text-black group-hover:underline hover:underline decoration-wavy">{{ post.title }}</h2>
+                        <h2 class="font-bold text-4xl text-black group-hover:underline hover:underline decoration-wavy mb-2 pb-2.5 overflow-scroll line-clamp-2">{{ post.title }} </h2>
                         <div class="flex flex-col justify-between gap-2 text-sm">
                             <div class="flex flex-row items-center flex-wrap gap-2">
                                 {% post_user_avatar post 'w-8 h-8 rounded-full object-cover' %}
@@ -27,7 +27,7 @@
                             </div>
                             <div>
                                 {% if post.specific.intro %}
-                                    {{ post.specific.intro }}
+                                    <div class="line-clamp-2">{{ post.specific.intro }}</div>
                                 {% else %}
                                     {{ post.specific.body|richtext|slice:":500" }}
                                 {% endif %}
