--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -5,7 +5,9 @@
 
 <div class="bg-green-700 py-8 flex-grow">
     <div class="max-w-3xl md:max-w-5xl mx-auto p-4">
-        <div class="bg-white rounded-xl overflow-hidden drop-shadow ">
+        <div class="bg-white rounded-xl overflow-hidden drop-shadow">
+
+            <!-- Header -->
             <div class="relative size-full aspect-[16/9]">
                 {% if page.image %}
                     {% picture page.image format-{webp,avif,jpeg} original class="blog-header-image" bgcolor-3730a3 %}
@@ -42,6 +44,8 @@
                     {% endif %}
                 </div>
             </div>
+
+            <!-- Body -->
             <div class="flex flex-col p-4 gap-4">
                 <div class="font-light">
                     {{ page.intro }}
@@ -49,15 +53,32 @@
                 <div>
                     {{ page.body|richtext }}
                 </div>
-                  
+
+                <!-- Google drive video -->
+                {% if preview_url %}
+                    <div class="aspect-video">
+                        <iframe 
+                            src="{{preview_url}}" 
+                            title="Video player"
+                            class="h-full w-full bg-slate-300 rounded-xl"
+                            frameBorder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowFullScreen
+                            loading="lazy"
+                        ></iframe>
+                    </div>
+                {% endif %}
+
                 <!-- Image Gallery -->
                 {% include "blog/includes/image-grid.html" with pictures=page.gallery_images.all %}
-
             </div>
-
+            
+            <!-- Comments -->
             <div class="inline-block w-full">
                 {% include "blog/includes/comments.html" with page=page %}
             </div>
+
+            <!-- Return to blog button -->
             <a href="{{ page.get_parent.url }}" class="inline-block w-full p-4 bg-gray-100 text-center hover:bg-gray-200 transition-colors">
                 🔙 {% trans "Return to blog" %}
             </a>
