--- a/src/blog/templates/blog/includes/image-grid.html
+++ b/src/blog/templates/blog/includes/image-grid.html
@@ -5,7 +5,9 @@
     {% for picture in page.gallery_images.all %}
         <div class="open-image-modal bg-white rounded-xl overflow-hidden drop-shadow group hover:rotate-3 transition-transform">
             {% image picture.image fill-1920x1080-c100 %}
-            <div class="pl-2 p-1">{{ picture.caption }}</div>
+            {% if picture.caption%}
+                <div class="pl-2 p-1">{{ picture.caption }}</div>
+            {% endif %}
             <div class="image-modal-info hidden">
                 {% image picture.image original class="image-modal-image" %}
                 <div>{{ picture.caption }}</div>
