--- a/src/blog/templates/blog/includes/image-modal.html
+++ b/src/blog/templates/blog/includes/image-modal.html
@@ -49,10 +49,12 @@
         }
     })
 
+    // Function triggerd by pressing the next button, to see the next picture in the gallery
     next.addEventListener('click', () => {
         console.log('next')
     })
 
+    // Function triggerd by pressing the previous button, to see the previous picture in the gallery
     prev.addEventListener('click', () => {
         console.log('prev')
     })
